--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link href="./style.css" rel="stylesheet"/>
     <script type="module">
       import { v4 as uuidv4 } from 'https://jspm.dev/uuid';
-      if( !localStorage.getItem("uuid"))
+//      if( !localStorage.getItem("uuid"))
         localStorage.setItem("uuid", uuidv4());
       localStorage.removeItem("upload");
     </script>
@@ -413,6 +413,7 @@
   
 	 <script>
       const isMac = navigator.platform.toUpperCase().indexOf('MAC')>=0;
+      // const mac = /(Mac|iPhone|iPod|iPad)/i.test(navigator.platform);
       if( isMac ){
         document.getElementById('certificadoPadre').hidden=true;
         document.getElementById('certificadoMadre').hidden=true;
