Añadidos precios y cursos faltantes

--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,10 @@
             <div class="col-sm-4">
               <label for="curso" class="form-label">Curso escolar</label>
               <select class="selectpicker col-12" name="curso">
+                <option>2º PRIMARIA</option>
+                <option>3º PRIMARIA</option>
                 <option>4º PRIMARIA</option>
+                <option>5º PRIMARIA</option>
                 <option>6º PRIMARIA</option>
                 <option>1º ESO</option>
                 <option>2º ESO</option>
@@ -392,6 +395,7 @@
           <label><strong>Destinatarios</strong> No se cederán datos a terceros, salvo olbigación legal o dando su consentimiento.</label>
           <label><strong>Derechos</strong> Acceso, rectificación, supresión, oposición y otros desarrollados en información adicional.</label>
           <label><strong>Información adicional</strong> <a href="mailto:inscripcioninmaculada@gmail.com">inscripcioninmaculada@gmail.com</a>  y <a href="inscripcionsanvicenteferrer@gmail.com">inscripcionsanvicenteferrer@gmail.com</a></label>
+          <label><strong>25€ para Catequesis Comunión y 10€ Catequesis ITIO y Confirmación.</strong></label>
 
           <hr class="my-4">
 
